2cfinal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csd-web-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csd-site
  template:
    metadata:
      labels:
        app: csd-site
    spec:
      containers: 
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: site-storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: script-storage
        configMap:
          name: downloader-script
      - name: site-storage
        persistentVolumeClaim:
          claimName: site-storage-pvc
