nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-assignment
spec:
  containers:
  - name: nginx
    image: nginx:1.29.5-alpine
    ports:
    - containerPort: 80
